[package]
name = "rust_back_example"
version = "0.1.0"
authors = ["John Murray <5672686+JRMurr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.5"



[lib]
name = "rust_back_example"
path = "src/main.rs"

[[bin]]
name = "rust_back_example"
path = "src/main.rs"